--- a/src/app/features/autenticacion/pages/register/register.component.html
+++ b/src/app/features/autenticacion/pages/register/register.component.html
@@ -115,11 +115,15 @@
             <input formControlName="peso" type="number" step="0.01" />
           </div>
           <div class="form-group">
-            <label>Talla:</label>
+            <label>Talla (cm):</label>
             <input formControlName="talla" type="number" step="0.01" />
 
           </div>
         </div>
+
+        <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+        <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
+
           <button class="submit-button" type="submit">Siguiente</button>
           <p>
             Al registrarse, aceptas los
